--- a/assets/css/components/Searchautocomplete.scss
+++ b/assets/css/components/Searchautocomplete.scss
@@ -31,7 +31,7 @@
     border-radius: 0.3rem;
     line-height: 2;
     font-size: 1.25rem;
-    background: $bgd-white url(http://i.stack.imgur.com/mJotv.gif) no-repeat right -1em center;
+    background: $bgd-white url(/build/images/layout/close.gif) no-repeat right -1em center;
     transition: background 0.4s;
 
     /*&__x {
