Change header menu

--- a/assets/css/components/Header.scss
+++ b/assets/css/components/Header.scss
@@ -60,7 +60,7 @@
     display: block;
     top: 149%;
     transform: scaleY(0);
-    width: auto;
+    width: 12em;
     transform-origin: top;
     background-color: $bgd-dark;
     transition: 0.25s;
