Fix template email

--- a/templates/includes/emails/contact.html.twig
+++ b/templates/includes/emails/contact.html.twig
@@ -2,7 +2,7 @@
   <p>Name : {{ contact.lastname }}</p>
   <p>Firstname : {{ contact.firstname }}</p>
   <p>Email : {{ contact.email }}</p>
-  <p>Country : {{  contact.label_country }}</p>
+  <p>Country : {{  contact.labelCountry }}</p>
   <p>Subject : {{ contact.topic|trans }}</p>
   <p>Message : {{ contact.message|raw }}</p>
 </div>
