--- a/templates/includes/layout/header.html.twig
+++ b/templates/includes/layout/header.html.twig
@@ -19,5 +19,6 @@
  data-currentlocale="{{ currentLocale }}"
  data-search-route="{{ path('search_ajax') }}"
  data-labels="{{ labelsTranslation|json_encode }}"
+ data-route
 >
 </div>
