--- a/templates/includes/layout/footer.html.twig
+++ b/templates/includes/layout/footer.html.twig
@@ -8,4 +8,5 @@
    data-share="{{ share|json_encode }}"
    data-labels="{{ labelsTranslation|json_encode }}"
    data-links="{{ links_footer|json_encode }}"
+   data-current-route="{{ main_route|default('') }}"
 ></div>
