--- a/templates/forms/contact.html.twig
+++ b/templates/forms/contact.html.twig
@@ -81,7 +81,7 @@
   </div>
 
   <div class="Form__group">
-    <input type="submit" class="Form__submit" id="btn_contact_submit" value="{{ 'contact.form.submit'|trans }}">
+    <button type="submit" class="Form__submit" id="btn_contact_submit">{{ 'contact.form.submit'|trans }}</button>
   </div>
 
 
