--- a/templates/forms/observation.html.twig
+++ b/templates/forms/observation.html.twig
@@ -137,6 +137,8 @@
   </div>
 
   <div class="Form__group">
-    <input type="submit" class="Form__submit" id="btn_contact_submit" value="{{ 'contact.form.submit'|trans }}">
+    <button type="submit" class="Form__submit" id="btn_contact_submit">
+      {{ 'contact.form.submit'|trans }}
+    </button>
   </div>
 {{ form_end(form) }}
