--- a/assets/css/components/BandeauHeader.scss
+++ b/assets/css/components/BandeauHeader.scss
@@ -14,7 +14,8 @@
     max-height: none;
     display: block;
     position: absolute;
-    left: 35%; /* WTF ?? */
+    left: 50%;
+    transform: translate(-50%, 0);
   }
 }
 
