--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% set pageTitle = 'menu.homepage'|trans %}
+{% set pageTitle = 'homepage.message'|trans ~ ' - ' ~ 'menu.homepage'|trans %}
 {% set pageDesc = 'homepage.message'|trans %}
+{% set pageImage = '' %}
 
 {% block content %}
   <div id="appHome"
