--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% set pageTitle = 'homepage.message'|trans ~ ' - ' ~ 'menu.homepage'|trans %}
+{% set pageTitle = 'homepage.message'|trans %}
 {% set pageDesc = 'homepage.message'|trans %}
 {% set pageImage = '' %}
 
