Change meta description

--- a/templates/pages/observation.html.twig
+++ b/templates/pages/observation.html.twig
@@ -2,6 +2,7 @@
 
 {% set pageTitle = observation.name %}
 {% set pageDesc = observation.description %}
+{#{% set pageImage = observation. %}#}
 
 {% block content %}
   <div id="app"
