--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% set pageTitle = 'homepage.message'|trans %}
-{% set pageDesc = 'homepage.message'|trans %}
+{% set pageDesc = 'homepage.desc'|trans({'%sitename%': 'dso'|trans}) %}
 {% set pageImage = '' %}
 
 {% block content %}
