Test og:image for home

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -2,7 +2,7 @@
 
 {% set pageTitle = 'homepage.message'|trans %}
 {% set pageDesc = 'homepage.desc'|trans({'%sitename%': 'dso'|trans}) %}
-{% set pageImage = '' %}
+{% set pageImage = '/build/images/background/bg-1.jpg' %}
 
 {% block content %}
   <div id="appHome"
