Add li balise in menu

--- a/assets/css/components/Header.scss
+++ b/assets/css/components/Header.scss
@@ -75,6 +75,11 @@
     margin: 0;
     left: -8em;
 
+    li {
+      margin: 0;
+      padding: 0;
+    }
+
     a {
       display: block;
       transition: 0.45s;
