--- a/assets/css/base/_init.scss
+++ b/assets/css/base/_init.scss
@@ -14,11 +14,17 @@ h1, h2, h3, h4, h5, h6 {
 h2 {
   font-size: 3rem;
   line-height: 1.5em;
+  @media($mq-phone) {
+    font-size: 2rem;
+  }
 }
 
 h3 {
   font-size: 2rem;
   line-height: 1.5em;
+  @media($mq-phone) {
+    font-size: 1.5rem;
+  }
 }
 
 input {
@@ -39,6 +45,9 @@ td {
 th, td {
   min-width: 200px;
   padding: 1em;
+  @media($mq-phone) {
+    padding: 0.8em;
+  }
 }
 
 p {
