--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,11 @@
         <meta property="og:image"         content="{{ pageImage }}" />
         <meta property="og:locale"        content="{{ pageLang }}" />
         <meta property="og:site_name"     content="{{ 'dso'|trans }}" />
+
+      {# Twitter cards #}
+      <meta name="twitter:card" content="summary" />
+      <meta name="twitter:site" content="{{ twitter_name }}" />
+
       {% endblock %}
       {#Favicon#}
       <link rel="icon" type="image/x-icon" href="{{ favicon }}"/>
