--- a/templates/includes/layout/header.html.twig
+++ b/templates/includes/layout/header.html.twig
@@ -1,12 +1,12 @@
 {% set labelsTranslation = {
-    'title': 'dso'|trans,
-    'searchPlaceholder': 'home.search.placeholder'|trans,
-    'openMenu': 'openMenu'|trans,
-    'switchLang': 'switchLang'|trans,
+    'title': 'dso'|trans|trim,
+    'searchPlaceholder': 'home.search.placeholder'|trans|trim,
+    'openMenu': 'openMenu'|trans|trim,
+    'switchLang': 'switchLang'|trans|trim,
     'nightMode': 'nightMode'|trans,
     'dayMode': 'dayMode'|trans,
-    'titleData': 'dso_tr'|trans,
-    'titleObservation': 'titleObservation'|trans
+    'titleData': 'dso_tr'|trans|trim,
+    'titleObservation': 'titleObservation'|trans|trim
   }
 %}
 <div id="appHeader"
