--- a/assets/css/components/Homeslider.scss
+++ b/assets/css/components/Homeslider.scss
@@ -1,32 +1,55 @@
+$items: 4;
+$animation-time: 10s;
+$transition-time: .3s;
+$scale: 20%;
+
+$total-time: ($animation-time * $items);
+$scale-base-1: (1 + $scale / 100%);
+
 .AppSlider {
-  &__title,
-  &__subTitle {
-    overflow: visible;
-    color: $color-text;
-    font-family: $font;
-    font-weight: 500;
-    font-size: 2rem;
-    margin-bottom: 0.5em;
-  }
 
   &__slides {
-    position: relative;
+    //position: relative;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
+    z-index: 0;
   }
 
-  &__dImage {
+  /*&__dImage {
     position: absolute;
     width: 100%;
     height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    //@media (min-width: 42em) {
-      animation: kenburns 8s;
-      animation-fill-mode: forwards;
-    //}
+    animation: kenburns 8s;
+    animation-fill-mode: forwards;
+  }*/
+  &__dImage {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: no-repeat 50% 50%;
+    background-size: cover;
+    animation-name: kenburns;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-duration: $total-time;
+    opacity: 1;
+    transform: scale($scale-base-1);
+
+    @for $i from 1 through $items {
+      &:nth-child(#{$i}) {
+        animation-name: kenburns-#{$i};
+        z-index: ($items - $i);
+      }
+    }
   }
 
-  &__enterActive,
+
+
+  /*&__enterActive,
   &__leaveActive {
     transition: opacity 1s;
   }
@@ -34,15 +57,16 @@
   &__enter,
   &__leaveTo {
     opacity: 0;
-  }
+  }*/
 
-  @keyframes kenburns {
+  /*@keyframes kenburns {
     100% {
       transform: scale3d(1.25, 1.25, 1.25) translate3d(-10%, -5%, 0);
     }
-  }
+  }*/
 
   &__Research {
+    z-index: 99;
     width: fit-content;
     position: fixed;
     top: 40%;
@@ -58,6 +82,54 @@
 
     @media ($mq-tablet) {
       top: 15%;
+    }
+  }
+
+  &__title,
+  &__subTitle {
+    z-index: 99;
+    overflow: visible;
+    color: $color-text;
+    font-family: $font;
+    font-weight: 500;
+    font-size: 2rem;
+    margin-bottom: 0.5em;
+  }
+}
+
+@for $i from 1 through $items {
+  @keyframes kenburns-#{$i} {
+    $animation-time-percent: percentage($animation-time / $total-time);
+    $transition-time-percent: percentage($transition-time / $total-time);
+
+    $t1: ($animation-time-percent * ($i - 1) - $transition-time-percent / 2);
+    $t2: ($animation-time-percent * ($i - 1) + $transition-time-percent / 2);
+    @if($t1 < 0%) { $t1: 0%; }
+    @if($t2 < 0%) { $t2: 0%; }
+
+    $t3: ($animation-time-percent * ($i) - $transition-time-percent / 2);
+    $t4: ($animation-time-percent * ($i) + $transition-time-percent / 2);
+    @if($t3 > 100%) { $t3: 100%; }
+    @if($t4 > 100%) { $t4: 100%; }
+
+    $t5: (100% - $transition-time-percent / 2);
+    $t6: (($t4 - $t1) * 100% / $t5);
+
+    #{$t1} { opacity: 1; transform: scale($scale-base-1); }
+    #{$t2} { opacity: 1; }
+    #{$t3} { opacity: 1; }
+    #{$t4} { opacity: 0; transform: scale(1); }
+
+    @if($i != $items) {
+      100% { opacity: 0; transform: scale($scale-base-1); }
+    }
+
+    @if($i == 1) {
+      $scale-plus: ($scale * (100% - $t5) / $t4);
+      $scale-plus-base-1: (1 + ($scale + $scale-plus) / 100%);
+
+      #{$t5} { opacity: 0; transform: scale($scale-plus-base-1); }
+      100% { opacity: 1; }
     }
   }
 }
