--- a/assets/css/components/Homeslider.scss
+++ b/assets/css/components/Homeslider.scss
@@ -68,10 +68,10 @@ $scale-base-1: (1 + $scale / 100%);
   &__Research {
     z-index: 99;
     width: fit-content;
-    position: fixed;
-    top: 40%;
+    position: absolute;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, 0);
+    transform: translate3d(-50%, -50%, 0);
 
     @media($mq-phone) {
       h2 {
