--- a/assets/css/components/Dso.scss
+++ b/assets/css/components/Dso.scss
@@ -42,6 +42,10 @@
     background-color: $bgd-grey;
     width: inherit;
     border-collapse: collapse;
+    @media($mq-phone) {
+      width: 100%;
+    }
+
   }
 
   &__tr {
