--- a/assets/css/components/Homeslider.scss
+++ b/assets/css/components/Homeslider.scss
@@ -78,6 +78,7 @@ $scale-base-1: (1 + $scale / 100%);
         text-align: center;
         font-size: 1em;
       }
+      width: 90%;
     }
 
     @media ($mq-tablet) {
