Add new route for schedule observation

--- a/templates/pages/observation_add.html.twig
+++ b/templates/pages/observation_add.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% set pageTitle = 'addObservation'|trans %}
-{% set pageDesc = '' %}
+{% set pageDesc = 'addObservationDesc'|trans %}
 
 {% block content %}
 
