--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -143,12 +143,17 @@
 }
 
 .appGridFilter {
-
-  display: grid;
   margin: 2em;
+  display: grid;
 
   &__filter {
     margin: auto;
+    display: inline-flex;
+    @media ($mq-phone) {
+      display: grid;
+      grid-gap: 1em;
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
   &__btn-radio {
@@ -159,7 +164,11 @@
     user-select: none;
     &:not(:first-child) {
       margin-left: 20px;
+      @media ($mq-phone) {
+        margin-left: 0;
+      }
     }
+    
     svg {
       fill: none;
       vertical-align: middle;
