--- a/assets/css/components/Form.scss
+++ b/assets/css/components/Form.scss
@@ -3,11 +3,14 @@
     background-color: $bgd-white;
     color: $color-text-dark;
     font-size: 1.25em;
+    width: 100%;
+    @media ($mq-phone) {
+      padding-right: 1em;
+    }
   }
 }
 
 .Form{
-
   &__group {
     display: flex;
     flex-wrap: wrap;
@@ -18,7 +21,6 @@
   }
 
   &__element {
-
     width: 100%;
     position: relative;
 
@@ -55,6 +57,13 @@
 
     span {
       padding-left: 0.3em;
+    }
+
+    @media ($mq-phone) {
+      display: grid;
+      grid-gap: 0.1em;
+      grid-template-columns: repeat(1, 1fr);
+      padding: 0em 0.1em;
     }
   }
 
