--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -145,6 +145,9 @@
 .appGridFilter {
   margin: 2em;
   display: grid;
+  @media ($mq-phone) {
+    margin: 1em;
+  }
 
   &__filter {
     margin: auto;
@@ -168,7 +171,7 @@
         margin-left: 0;
       }
     }
-    
+
     svg {
       fill: none;
       vertical-align: middle;
