--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -151,10 +151,11 @@
 
   &__filter {
     margin: auto;
-    display: inline-flex;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 1em;
     @media ($mq-phone) {
       display: grid;
-      grid-gap: 1em;
+      grid-gap: 0.5em;
       grid-template-columns: repeat(2, 1fr);
     }
   }
