Refactoring Image : use an entity from astrobin data

--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -9,7 +9,7 @@
   <div id="appDso"
     data-dso-widget
     data-imgcover="{{ imgCover|default('default') }}"
-    data-imgcoveruser="{{ imgCoverUser|default('') }}"
+    data-imgcoveralt="{{ imgCoverAlt|default('') }}"
     data-dso="{{ dsoData|json_encode }}"
     data-title="{{ title }}"
     data-title-map="{{ 'skymap'|trans }}"
