--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,9 +17,9 @@
       {% block meta %}
         {#Meta#}
         <title>{{ pageTitle }}</title>
-        <meta name="title" content="{{ pageTitle }}">
-        <meta name="description" content="{{ pageDesc }}">
-        <link rel="canonical" href="{{ pageUrlCanonical }}">
+        <meta name="title" content="{{ pageTitle }}" />
+        <meta name="description" content="{{ pageDesc }}" />
+        <link rel="canonical" href="{{ pageUrlCanonical }}" />
 
         {#OpenGraph#}
         <meta property="fb:app_id"        content="{{ facebookId }}" />
