--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
   {% spaceless %}
     {% set pageLang = app.request.locale %}
     {% set pageTitle = 'dso'|trans ~ ' - ' ~ pageTitle|default('') %}
-    {% set pageDesc = pageDesc|default('homepage.desc'|trans) %}
+    {% set pageDesc = pageDesc|default('homepage.desc'|transchoice({'%sitename%': 'dso'|trans})) %}
     {% set pageUrl = app.request.uri %}
     {% set pageImage = pageImage|default('/build/images/logo_tmp.png') %}
     {% set pageUrlCanonical = app.request.getSchemeAndHttpHost ~ app.request.baseUrl ~ app.request.pathInfo %}
