--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,10 +2,14 @@
   {% spaceless %}
     {% set pageLang = app.request.locale %}
     {% set pageTitle = 'dso'|trans ~ ' - ' ~ pageTitle|default('') %}
-    {% set pageDesc = pageDesc|default('homepage.desc'|transchoice({'%sitename%': 'dso'|trans})) %}
+
+    {% set pageDescDefault = 'homepage.desc'|trans({'%sitename%': 'dso'|trans}) %}
+    {% set pageDesc = pageDesc|default(pageDescDefault) %}
+
     {% set pageUrl = app.request.uri %}
     {% set pageImage = pageImage|default('/build/images/logo_tmp.png') %}
     {% set pageUrlCanonical = app.request.getSchemeAndHttpHost ~ app.request.baseUrl ~ app.request.pathInfo %}
+
     {% set favicon = favicon|default('') %}
     {% set facebookId = facebookId|default(null) %}
   {% endspaceless %}
