--- a/templates/forms/event.html.twig
+++ b/templates/forms/event.html.twig
@@ -1,52 +1,95 @@
 {{ form_start(form) }}
 
-  {{ form_label(form.name) }}
-  {{ form_widget(form.name) }}
-  {{ form_errors(form.name) }}
+  <h3 class="Dso__title">{{ 'Information'|trans }}</h3>
 
-  {{ form_label(form.eventDate) }}
-  {{ form_widget(form.eventDate) }}
-  {{ form_errors(form.eventDate) }}
+  <div class="Form__group">
+    <div class="Form__element Form__element__1-2">
+      {{ form_label(form.name) }}
+      {{ form_widget(form.name) }}
+      {{ form_errors(form.name) }}
+    </div>
 
-  {{ form_label(form.description) }}
-  {{ form_widget(form.description) }}
-  {{ form_errors(form.description) }}
+    <div class="Form__element Form__element__1-2">
+      {{ form_label(form.eventDate) }}
+      {{ form_widget(form.eventDate) }}
+      {{ form_errors(form.eventDate) }}
+    </div>
+  </div>
 
-  {{ form_label(form.locationLabel) }}
-  {{ form_widget(form.locationLabel) }}
-  {{ form_errors(form.locationLabel) }}
+  <div class="Form__group">
+    {{ form_label(form.description) }}
+    {{ form_widget(form.description) }}
+    {{ form_errors(form.description) }}
+  </div>
 
-  {{ form_label(form.location) }}
-  {{ form_widget(form.location) }}
-  {{ form_errors(form.location) }}
+<h3 class="Dso__title">{{ 'place'|trans }}</h3>
 
-  {{ form_label(form.organiserName) }}
-  {{ form_widget(form.organiserName) }}
-  {{ form_errors(form.organiserName) }}
+  <div class="Form__group">
+    {{ form_label(form.locationLabel) }}
+    {{ form_widget(form.locationLabel) }}
+    {{ form_errors(form.locationLabel) }}
+  </div>
 
-  {{ form_label(form.organiserMail) }}
-  {{ form_widget(form.organiserMail) }}
-  {{ form_errors(form.organiserMail) }}
+  <div id="map" class="Dso__leaflet">
+    <l-map :zoom="zoom" :center="center" v-on:click="addMarker" ref="map">
+      <l-tile-layer :url="url" :attribution="attribution"></l-tile-layer>
+      <l-marker v-for="marker,index in markers" :lat-lng="marker" v-on:click="removeMarker(index)"></l-marker>
+    </l-map>
+    {{ form_widget(form.location) }}
+  </div>
 
-  {{ form_label(form.organiserTel) }}
-  {{ form_widget(form.organiserTel) }}
-  {{ form_errors(form.organiserTel) }}
+<h3 class="Dso__title">{{ 'organiser'|trans }}</h3>
+  <div class="Form__group">
 
-  {{ form_label(form.public) }}
-  {{ form_widget(form.public) }}
-  {{ form_errors(form.public) }}
+    <div class="Form__element Form__element__1-2">
+      {{ form_label(form.organiserName) }}
+      {{ form_widget(form.organiserName) }}
+      {{ form_errors(form.organiserName) }}
+    </div>
 
-  {{ form_label(form.tarif) }}
-  {{ form_widget(form.tarif) }}
-  {{ form_errors(form.tarif) }}
+    <div class="Form__element Form__element__1-2">
+      {{ form_label(form.organiserMail) }}
+      {{ form_widget(form.organiserMail) }}
+      {{ form_errors(form.organiserMail) }}
+    </div>
+  </div>
+  <div class="Form__group">
+    <div class="Form__element Form__element__1-2">
+    {{ form_label(form.organiserTel) }}
+    {{ form_widget(form.organiserTel) }}
+    {{ form_errors(form.organiserTel) }}
+    </div>
 
-  {{ form_label(form.numberEntrant) }}
-  {{ form_widget(form.numberEntrant) }}
-  {{ form_errors(form.numberEntrant) }}
+    <div class="Form__element Form__element__1-2">
+    {{ form_label(form.public) }}
+    {{ form_widget(form.public) }}
+    {{ form_errors(form.public) }}
+    </div>
+  </div>
+
+  <div class="Form__group">
+    <div class="Form__element Form__element__1-2">
+    {{ form_label(form.tarif) }}
+    {{ form_widget(form.tarif) }}
+    {{ form_errors(form.tarif) }}
+    </div>
+
+    <div class="Form__element Form__element__1-2">
+    {{ form_label(form.numberEntrant) }}
+    {{ form_widget(form.numberEntrant) }}
+    {{ form_errors(form.numberEntrant) }}
+    </div>
+  </div>
+</div>
+
+  {% form_theme form '@EWZRecaptcha/Form/ewz_recaptcha_widget.html.twig' %}
+  {{ form_widget(form.recaptcha) }}
 
   {{ form_widget(form.pot2Miel) }}
 
-  <button type="submit" class="">
-    {{ 'contact.form.submit'|trans }}
-  </button>
+  <div class="Form__group">
+    <button type="submit" class="Form__submit" id="btn_event_submit">
+      {{ 'contact.form.submit'|trans }}
+    </button>
+  </div>
 {{ form_end(form) }}
