--- a/templates/pages/observation_add.html.twig
+++ b/templates/pages/observation_add.html.twig
@@ -36,4 +36,6 @@
 {% block javascripts %}
   {{ parent() }}
   {{ encore_entry_script_tags('leaflet') }}
+  {{ encore_entry_script_tags('tags') }}
+
 {% endblock %}
