--- a/templates/pages/observations.html.twig
+++ b/templates/pages/observations.html.twig
@@ -11,6 +11,7 @@
      data-map-title="{{ 'locationObservation'|trans }}"
      data-search-route="{{ path('search_observation_ajax') }}"
      data-ajax-observations="{{ path('observation_list_ajax') }}"
+     data-ajax-events="{{ path('events_list_ajax') }}"
      data-observation-autocomplete="{{ 'observation.search.placeholder'|trans }}"
   >
   </div>
