--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -151,9 +151,8 @@
 
   &__filter {
     margin: auto;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(var(--grid-items), minmax(var(--grid-min), 1fr));
     grid-gap: 1em;
-    display: grid;
     @media ($mq-phone) {
       display: grid;
       grid-gap: 0.5em;
