--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,7 +36,7 @@
         <meta property="og:site_name"     content="{{ 'dso'|trans }}" />
 
         {# Twitter cards #}
-        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="{{ twitter_name }}" />
         <meta name="twitter:title" content="{{ pageTitle }}" />
         <meta name="twitter:description" content="{{ pageDesc }}" />
