--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -3,6 +3,8 @@
 {% set pageTitle = title %}
 {% set pageImage = imgCover %}
 {% set pageDesc = description|truncate(200) %}
+{% set pageImageDesc = imgCoverAlt %}
+
 {#https://coxpi.draftium.site/#}
 
 {% block content %}
