Add alert for astrobin error

--- a/assets/css/components/Form.scss
+++ b/assets/css/components/Form.scss
@@ -136,5 +136,9 @@
     background-color: $bgd-success;
     border: 1px solid $border-success;
   }
-
+  &__info {
+    color: #856404;
+    background-color: #fff3cd;
+    border-color: #ffeeba;
+  }
 }
