Add alert for astrobin error

--- a/assets/css/components/Form.scss
+++ b/assets/css/components/Form.scss
@@ -139,6 +139,6 @@
   &__info {
     color: #856404;
     background-color: #fff3cd;
-    border-color: #ffeeba;
+    border-color: 1px solid #ffeeba;
   }
 }
