--- a/templates/pages/constellation.html.twig
+++ b/templates/pages/constellation.html.twig
@@ -20,7 +20,13 @@
      data-filter="{{ list_types_filters|json_encode }}"
      data-url-ajax="{{ ajax_dso_by_const }}"
   ></div>
-  <div id="geojson" data-dso="{{ geojsonDso|json_encode }}" data-center="{{ centerMap|json_encode }}" data-const="{{ constellation.id }}" data-zoom="5" aria-hidden="true"></div>
+  <div id="geojson"
+       data-dso="{{ geojsonDso|json_encode }}"
+       data-center="{{ centerMap|json_encode }}"
+       data-const="{{ constellation.id }}"
+       data-zoom="5" aria-hidden="true"
+  >
+  </div>
 {% endblock %}
 
 {% block javascripts %}
