test analytics variable

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
     {% set favicon = favicon|default('') %}
     {% set facebookId = facebookId|default(null) %}
 
-    {% set analyticsId = analyticsId|default(null) %}
+    {% set analyticsId = analyticsId|default('') %}
   {% endspaceless %}
   <!DOCTYPE html>
   <html lang="{{ pageLang }}">
