--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -59,7 +59,7 @@
       {% endblock %}
 
       {% block analytics %}
-        {% include 'includes/layout:analytics.html.twig' %}
+        {% include 'includes/layout/analytics.html.twig' %}
       {% endblock %}
     </head>
 
