Fix translation add event

--- a/templates/forms/event.html.twig
+++ b/templates/forms/event.html.twig
@@ -1,6 +1,6 @@
 {{ form_start(form) }}
 
-  <h3 class="Dso__title">{{ 'Information'|trans }}</h3>
+  <h3 class="Dso__title">{{ 'info'|trans }}</h3>
 
   <div class="Form__group">
     <div class="Form__element Form__element__1-2">
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <h3 class="Dso__title">{{ 'place'|trans }}</h3>
+  <h3 class="Dso__title">{{ 'observation.add.location'|trans }}</h3>
 
   <div class="Form__group">
     {{ form_label(form.locationLabel) }}
