--- a/assets/css/components/Pagination.scss
+++ b/assets/css/components/Pagination.scss
@@ -18,17 +18,23 @@ $angleActive: 25deg;
 .pagination {
   margin: 5em;
   text-align: center;
+  @media ($mq-phone) {
+    margin: 1em;
+  }
 }
 
 .paginate {
-  margin: 10em;
+  margin: -5em 10em 0 10em;
   width: $sizeI;
   height: $sizeI;
   cursor: pointer;
   transform: translate3d(0,0,0); // fixes flicker in webkit
   top: 50%;
-  margin-top: -5em;
   -webkit-filter: drop-shadow( 0 2px 0px rgba(0,0,0,0.2) );
+
+  @media ($mq-phone) {
+    margin: -4em 4em 0em 4em;
+  }
 
   i {
     position: absolute;
@@ -100,7 +106,6 @@ $angleActive: 25deg;
 
 .counter {
   font-size: 30px;
-  font-family: Helvetica, sans-serif;
   text-shadow: 0px 2px 0px rgba( 0, 0, 0, 0.2 );
   color: $color-text-dark;
 }
