Responsive : fix pagination

--- a/assets/css/components/Pagination.scss
+++ b/assets/css/components/Pagination.scss
@@ -16,7 +16,7 @@ $angleActive: 25deg;
 }
 
 .pagination {
-  margin: 5em;
+  margin: 3em 5em 0em 5em;
   text-align: center;
   @media ($mq-phone) {
     margin: 1em;
