--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -10,6 +10,7 @@
      data-search-route="{{ path('search_ajax') }}"
      data-search-placeholder="{{ 'home.search.placeholder'|trans }}"
   ></div>
+  {{ render_esi(controller()) }}
 {% endblock %}
 
 {% block javascripts %}
